dvn-workshop-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvn-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: dvn-application-load-balancer
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0544381ca01cdf8de,subnet-0fc7f9b77a9577e53
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
